<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:ads="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:id="@+id/forEdit"
    android:clickable="true"
    android:orientation="vertical"
    android:paddingHorizontal="12dp"
    android:paddingVertical="6dp"
    ads:targetApi="o"
    android:focusable="true">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/edit_the_slot_here"
        android:textStyle="bold"
        android:textSize="20sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lec"
                android:textSize="15sp"
                android:textColor="#000000"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/room"
                android:layout_marginEnd="16dp"
                android:layout_alignParentEnd="true"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold" />


        </RelativeLayout>


    </LinearLayout>

    <EditText
        android:id="@+id/subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subject"
        android:textColor="#000000"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/timing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:textColor="#000000"
            android:text="@string/time"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/faculty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:text="@string/faculty"
            android:textColor="#000000"
            android:textSize="15sp" />


    </LinearLayout>
    <Button
        android:layout_marginTop="6dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/buttons_colorprimary_bg"
        android:text="@string/save"
        android:textColor="#ffffff"
        android:id="@+id/saveDetails"/>


</LinearLayout>